<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="31dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id = "@+id/linearlayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/logo"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id = "@+id/button1"
            android:layout_marginTop="90sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:layout_weight="3.5"
            android:onClick = "button_regular"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/linearlayout1"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id = "@+id/button2"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:layout_weight="3.5"
            android:onClick = "button_ultimate"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/linearlayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/linearlayout2"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id = "@+id/button3"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:layout_weight="3.5"
            android:onClick = "button_quantum"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/linearlayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/linearlayout3"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id = "@+id/button4"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:layout_weight="3.5"
            android:onClick = "button_your_choice"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>