<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".button1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".button1">


        <TextView
            android:id="@+id/player1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/player1_score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player1__number_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/player1_score"
            android:layout_toRightOf="@id/player1_score"
            android:text="@string/player1_number_score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/player2__number_score"
            android:text="@string/player2_score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player2__number_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/player2_number_score"
            android:textSize="30sp" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1">

        <Button
            android:id = "@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1">

        <Button
            android:id = "@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1">

        <Button
            android:id = "@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>
        <Button
            android:id = "@+id/button_22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:textSize = "60sp"/>

    </LinearLayout>
</LinearLayout>